# main.go
@@ -39,6 +39,7 @@ func main() {
 	//destination
 	router.GET("/api/v1/destination", destinationController.FindAll)
 	router.POST("/api/v1/destination", destinationController.Create)
+	router.PUT("/api/v1/destination/:destinationId", destinationController.Update)
 
 	router.PanicHandler = exception.ErrorHandler
 
